# ESP32IntruderAlarm

./: .gitignore  README.md
firmware/esp32-csi-node/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/esp32-csi-node/main/: CMakeLists.txt  main.c
firmware/esp32-csi-sender/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/esp32-csi-sender/main/: main.c
firmware/esp32-s3-wroom/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/esp32-s3-wroom/main/: CMakeLists.txt
raspberrypi/: .env.example  README.md  amend-ports.sh  install-and-run.sh
raspberrypi/PWA/: README.md  package-lock.json  package.json  tsconfig.json
raspberrypi/PWA/docs/: EXPLANATION_MANUAL.md  HOW_TO_GUIDES.md  PWA_PUSH_REQUIREMENTS_ASSESSMENT.md  TECHNICAL_MANUAL.md
raspberrypi/PWA/public/: app-config.js  app.js  index.html  manifest.webmanifest  service-worker.js  styles.css
raspberrypi/PWA/src/: config.ts  db.ts  server.ts
raspberrypi/docs/: EXPLANATION_MANUAL.md  HOW_TO_GUIDES.md  TECHNICAL_MANUAL.md
raspberrypi/python/: README.md  pyproject.toml
raspberrypi/python/docs/: EXPLANATION_MANUAL.md  HOW_TO_GUIDES.md  TECHNICAL_MANUAL.md
raspberrypi/python/src/esp32_alarm_worker/: __init__.py  _version.py  config.py  server.py  state.py  views.py
raspberrypi/python/src/esp32_alarm_worker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
