[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "esp32-alarm-worker"
version = "0.0.1"
description = "Raspberry Pi ESP32 telemetry worker for ESP32IntruderAlarm"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.14.1,<4",
  "python-dotenv>=1.2.2,<2"
]

[project.scripts]
esp32-alarm-worker = "esp32_alarm_worker.server:main"

[tool.setuptools.packages.find]
where = ["src"]
